Refactoring handling of results sorting logic.